updated image not showing issue

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ a{
 #intro-section{
   display: grid;
   grid-row-start: 2;
-  background-image: url("/assets/background.jpg");
+  background-image: url("./background.jpg");
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -122,7 +122,7 @@ a{
 }
 
 #projects{
-  background-image: url("/assets/skill-background.png");
+  background-image: url("./skill-background.png");
   background-size: 1920px 800px;
   overflow: hidden;
   margin-top: 100px;
@@ -245,7 +245,7 @@ a{
 #intro-section{
   display: grid;
   grid-row-start: 2;
-  background-image: url("/assets/background.jpg");
+  background-image: url("./background.jpg");
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -297,7 +297,7 @@ a{
 }
 
 #skills-section{
-  background-image: url("/assets/skill-background.png");
+  background-image: url("./skill-background.png");
   background-size: 1920px 800px;
   overflow: hidden;
   margin-top: 100px;
